--- a/.github/workflows/main_wordleweb2023.yml
+++ b/.github/workflows/main_wordleweb2023.yml
@@ -1,13 +1,14 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Wordle 2023 API CI/CD
+name: Build and deploy ASP.Net Core app to Azure Web App - WordleWeb2023
 
 on:
   push:
     branches:
       - main
-    paths: 
+      - azure-assignment-deployment
+    paths:
       - Wordle.Api/**
   workflow_dispatch:
 
@@ -16,10 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Set up .NET Core
-        uses: actions/setup-dotnet@v2
+        uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '7.x'
           include-prerelease: true
@@ -30,13 +31,14 @@ jobs:
 
       - name: dotnet publish
         working-directory: ./Wordle.Api
-        run: dotnet publish Wordle.Api -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
           name: .net-app
           path: ${{env.DOTNET_ROOT}}/myapp
+          working-directory: ./Wordle.Api
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,7 +49,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
           name: .net-app
 
@@ -55,7 +57,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{secrets.ApiAppName}}
+          app-name: 'WordleWeb2023'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_API }}
           package: .
